<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TaskCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Task Title -->
        <TextView
            android:id="@+id/task_title"
            style="@style/TaskTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164"
            tools:text="Complete Project" />

        <!-- Divider (Spacer) -->
        <View
            android:id="@+id/divider"
            style="@style/TaskDividerStyle"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title" />

        <!-- Checkbox and Label -->
        <LinearLayout
            android:id="@+id/checkbox_label_layout"
            style="@style/ButtonStyle"
            android:layout_width="204dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <!-- Checkbox Label -->
            <TextView
                android:id="@+id/completion_label"
                style="@style/TaskLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/mark_as_completed" />

            <!-- Completion Checkbox -->
            <CheckBox
                android:id="@+id/task_completed_checkbox"
                style="@style/TaskCheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mark_task_completed" />
        </LinearLayout>

        <!-- Task Completion GIF -->
        <ImageView
            android:id="@+id/task_completion_animation"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/completion_animation"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_label_layout" />

        <!-- Task Description -->
        <LinearLayout
            android:id="@+id/task_description_layout"
            style="@style/ButtonStyle"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_completion_animation">

            <TextView
                android:id="@+id/task_description"
                style="@style/TaskDescriptionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_completion_animation"
                tools:text="Finish the final project by the end of the week." />
        </LinearLayout>

        <!-- Due Date, Time, and Priority -->
        <LinearLayout
            android:id="@+id/due_date_time_priority_layout"
            style="@style/ButtonStyle"
            android:layout_width="344dp"
            android:layout_height="46dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description_layout">

            <!-- Due Date -->

            <TextView
                android:id="@+id/task_due_date_label"
                style="@style/TaskLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="1dp"
                android:textSize="13dp"
                tools:text="Due Date:" />

            <TextView
                android:id="@+id/task_due_date"
                style="@style/TaskDescriptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                tools:text="2024-05-15" />

            <!-- Spacer -->
            <View
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <!-- Due Time -->
            <TextView
                android:id="@+id/task_due_time_label"
                style="@style/TaskLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textSize="13dp"
                tools:text="Time:" />

            <TextView
                android:id="@+id/task_due_time"
                style="@style/TaskDescriptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                tools:text="15:30" />

            <!-- Spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!-- Priority -->
            <TextView
                android:id="@+id/task_priority_label"
                style="@style/TaskLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textSize="13dp"
                tools:text="Priority:" />

            <TextView
                android:id="@+id/task_priority"
                style="@style/TaskDescriptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                tools:text="High" />
        </LinearLayout>

        <!-- Divider (Spacer) -->
        <View
            android:id="@+id/divider2"
            style="@style/TaskDividerStyle"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/due_date_time_priority_layout" />

        <!-- Button Section -->
        <LinearLayout
            android:id="@+id/button_section"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2">

            <!-- Edit Button -->
            <LinearLayout style="@style/ButtonStyle">

                <ImageButton
                    android:id="@+id/btn_edit"
                    style="@style/ButtonIconStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit_task"
                    android:src="@drawable/ic_edit" />

                <TextView
                    style="@style/TaskLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />
            </LinearLayout>

            <!-- Delete Button -->
            <LinearLayout style="@style/ButtonStyle">

                <ImageButton
                    android:id="@+id/btn_delete"
                    style="@style/ButtonIconStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/delete_task"
                    android:src="@drawable/ic_delete" />

                <TextView
                    style="@style/TaskLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </LinearLayout>

            <!-- Notify Button -->
            <LinearLayout style="@style/ButtonStyle">

                <ImageButton
                    android:id="@+id/btn_set_notification"
                    style="@style/ButtonIconStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/set_notification"
                    android:src="@drawable/ic_task_notification" />

                <TextView
                    style="@style/TaskLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notify" />
            </LinearLayout>

            <!-- Share Button -->
            <LinearLayout style="@style/ButtonStyle">

                <ImageButton
                    android:id="@+id/btn_share_email"
                    style="@style/ButtonIconStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/share_via_email"
                    android:src="@drawable/ic_email" />

                <TextView
                    style="@style/TaskLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
